[package]
name = "actix-shopify"
version = "0.1.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hex = "0.4.2"
hmac = "0.10.1"
once_cell = "1.5.2"
regex = "1.4.3"
sha2 = "0.9.2"
textnonce = "1.0.0"
